feat(api): Add api handlers for getting and posting guests Make all fields required in the openapi spec; Implement contracts functions for converting guests between the db model and API request/response ;Minor changes to logging
