# openapi.yml
@@ -150,6 +150,9 @@ components:
   schemas:
     AuthRequest: 
       type: object
+      required: 
+        - guestName
+        - password
       properties:
         guestName:
           type: string
@@ -158,6 +161,10 @@ components:
 
     GuestResponse:
       type: object
+      required: 
+        - id
+        - name
+        - secret
       properties:
         id: 
           type: integer
@@ -168,6 +175,9 @@ components:
 
     GuestRequest:
       type: object
+      required: 
+        - name
+        - secret
       properties:
         name: 
           type: string
@@ -176,6 +186,9 @@ components:
 
     GuestStatsResponse:
       type: object
+      required:
+        - guestId
+        - visits
       properties:
         guestId:
           type: string
@@ -185,6 +198,10 @@ components:
             $ref: '#/components/schemas/GuestStats'
     GuestStats:
       type: object
+      required: 
+        - date
+        - drawings
+        - linesDrawn
       properties:
         date: 
           type: string
@@ -195,6 +212,10 @@ components:
           type: integer
     StatsResponse:
       type: object
+      required: 
+        - totalGuests
+        - totalLinesDrawn
+        - guests
       properties:
         totalGuests:
           type: integer
